testsuite/tests/typecheck/should_fail/T16059e.stderr

T16059e.hs:14:6: error:
    • Illegal polymorphic type: forall a. a
      Perhaps you intended to use RankNTypes
    • In the expansion of type synonym ‘Foo’
      In the expansion of type synonym ‘Const’
      In the type signature: g :: Const Foo Foo -> Int
